tests/tc/pos/obj01.js

/*@ id :: forall A B . ({a: A, b: B}) => A */
function id(x) {
  return x.a;
}

