tests/tc/neg/union07.js
/*@ foo0 :: forall A B C. (A) => B + C */
function foo0(x) {
  return x;
}

